--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <title>웹프 팀플과제</title>
         <link rel="stylesheet" href="./game/style.css" />
+        <script defer src="./game/constant.js"></script>
+        <script defer src="./game/stage.js"></script>
+        <script defer src="./game/collide.js"></script>
+        <script defer src="./game/paddle.js"></script>
+        <script defer src="./game/brick.js"></script>
+        <script defer src="./game/ball.js"></script>
+        <script defer src="./game/scene.js"></script>
         <script defer src="./game/game.js"></script>
     </head>
     <body>
