--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
         <script defer src="./game/game.js"></script>
     </head>
     <body>
-        <canvas id="screen"></canvas>
+        <div id="content">
+            <div id="top">
+                <div id="left">
+                    <div class="title">LIFE</div>
+                    <div id="life"></div>
+                </div>
+                <div id="middle">
+                    <div class="title">TIME</div>
+                    <div id="time"></div>
+                </div>
+                <div id="right">
+                    <div class="title">SCORE</div>
+                    <div id="score"></div>
+                </div>
+            </div>
+            <canvas id="screen"></canvas>
+            <div id="bottom"></div>
+        </div>
     </body>
 </html>
