add pageChange effect

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     </head>
     <body>
         <div id="startPage">
+            <canvas id="introducePage"></canvas>
+            <button id="startButton">게임 시작</button>
             <button id="introduceButton">게임 소개</button>
-            <canvas id="tutorial" width="150" height="150"></canvas>
         </div>
         <div id="opening">
+            <button id="skipButton">SKIP</button>
         </div>
         <div id="content">
             <div id="top">
