Added item brick

--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
             <canvas id="screen"></canvas>
             <div id="bottom"></div>
         </div>
-        <div id="gameOver">
-        </div>
-        <div id="gameClear">
-        </div>
+        <div id="gameOver"></div>
+        <div id="gameClear"></div>
     </body>
 </html>
