BGM add - first

--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
             <canvas id="screen"></canvas>
             <div id="bottom"></div>
         </div>
-        <div id="gameOver"></div>
-        <div id="gameClear"></div>
+        <div id="gameOver">
+            게임 오버 화면
+        </div>
+        <div id="gameClear">
+            게임 클리어 화면
+        </div>
     </body>
 </html>
