added score calculation screen

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
         <div id="gameOver">게임 오버 화면</div>
         <div id="gameClear">
-            <div id="result"></div>
+            <p id="result"></p>
             <button id="nextButton">다음 스테이지</button>
         </div>
     </body>
