added several feature

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
 
         <div id="opening">
-            <button id="skipButton">SKIP</button>
+            <p>Enter를 눌러서 오프닝 스킵</p>
             <h2 id="line1">
                 모험을 하던 커비는 맛있는 케이크 생각을 하며 길을 걷고 있었다.
             </h2>
@@ -115,7 +115,7 @@
         <div id="gameOver">
             <img id="gameoverImg" src="./images/gameover.png" />
             <h2 id="showScore">score :</h2>
-            <img id="resetButton" src="./images/reset.png" />
+            <button id="resetButton">RESET</button>
         </div>
         <div id="gameClear">
             <p id="stagecleartitle">Stage Clear</p>
