added ending screen, fixed dark function

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         <div id="startPage">
             <div id="title_start"></div>
             <div id="main_start">
-                <button class="btn_start" id="startButton">game start</button>
-                <button class="btn_start" id="ruleButton">game rule</button>
-                <button class="btn_start" id="setButton">game set</button>
-                <button class="btn_start" id="overButton">game over</button>
+                <button class="btn_start" id="startButton">Game Start</button>
+                <button class="btn_start" id="ruleButton">Game Rule</button>
+                <button class="btn_start" id="setButton">Settings</button>
+                <button class="btn_start" id="overButton">Quit</button>
             </div>
             <div id="rulePage" class="page">
                 <div class="ruletitle" id="rule">
@@ -67,7 +67,7 @@
         </div>
 
         <div id="opening">
-            <p>Enter를 눌러서 오프닝 스킵</p>
+            <p>Enter를 눌러서 오프닝 넘기기</p>
             <h2 id="line1">
                 모험을 하던 커비는 맛있는 케이크 생각을 하며 길을 걷고 있었다.
             </h2>
@@ -124,8 +124,8 @@
             <button id="nextButton">Next Stage</button>
         </div>
         <div id="gameAllClear">
-            <button id="goback">돌아가기</button>
             <img id="credit" src="./images/credit.png" />
+            <button id="goback">돌아가기</button>
         </div>
     </body>
 </html>
