added pause at ballOutScene

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
         <div id="gameAllClear">
             <img id="credit" src="./images/credit.png" />
-            <button id="goback">돌아가기</button>
+            <button id="goback">Home</button>
         </div>
     </body>
 </html>
