changed button style

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
                 </div>
             </div>
             <canvas id="screen"></canvas>
-            <div id="bottom"></div>
+            <div id="bottom">
+                ESC를 눌러 일시정지 / 일시정지 상태에서 Q를 눌러 메인화면
+            </div>
         </div>
 
         <div id="gameOver">
